--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.5",
-    "@ds-pack/components": "^0.0.18",
+    "@ds-pack/components": "*",
+    "@ds-pack/use-refs": "^1.0.0",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^10.0.3",
+    "@next/mdx": "^11.1.0",
+    "nanopop": "^2.1.0",
     "next": "^11.1.0",
-    "react": "^0.0.0-experimental-3310209d0",
-    "react-dom": "^0.0.0-experimental-3310209d0",
+    "react": "experimental",
+    "react-dom": "experimental",
+    "simple-props": "^0.5.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
