--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^11.1.0",
+    "@vanilla-extract/babel-plugin": "^1.1.4",
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/next-plugin": "^2.0.1",
     "nanopop": "^2.1.0",
     "next": "^11.1.3",
     "react": "experimental",
