--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
     "deploy-prod": "now --prod"
   },
   "dependencies": {
-    "@babel/runtime": "^7.12.5",
+    "@babel/runtime": "^7",
     "@ds-pack/components": "*",
-    "@ds-pack/use-refs": "^1.0.0",
-    "@mdx-js/loader": "^1.6.22",
-    "@mdx-js/react": "^1.6.22",
-    "@next/mdx": "^11.1.0",
-    "@vanilla-extract/babel-plugin": "^1.1.4",
-    "@vanilla-extract/css": "^1.6.8",
-    "@vanilla-extract/next-plugin": "^2.0.1",
-    "nanopop": "^2.1.0",
-    "next": "^11.1.3",
+    "@ds-pack/use-refs": "^1",
+    "@mdx-js/loader": "^1",
+    "@mdx-js/react": "^1",
+    "@next/mdx": "^11",
+    "@vanilla-extract/babel-plugin": "^1",
+    "@vanilla-extract/css": "^1",
+    "@vanilla-extract/next-plugin": "^2",
+    "nanopop": "^2",
+    "next": "canary",
     "react": "experimental",
     "react-dom": "experimental",
-    "simple-props": "^0.5.0",
-    "styled-components": "^5.2.1"
+    "simple-props": "^0",
+    "styled-components": "^5"
   },
   "devDependencies": {
     "@babel/cli": "^7",
@@ -34,9 +34,9 @@
     "@babel/plugin-transform-typescript": "^7",
     "@babel/preset-env": "^7",
     "@babel/preset-react": "^7",
-    "@types/node": "^14.0.1",
-    "@types/react": "^16.9.35",
-    "babel-plugin-styled-components": "^1.10.7",
+    "@types/node": "^14",
+    "@types/react": "^16",
+    "babel-plugin-styled-components": "^1",
     "typescript": "^4"
   }
 }
