--- a/package.json
+++ b/package.json
@@ -13,30 +13,23 @@
     "@babel/runtime": "^7",
     "@ds-pack/components": "*",
     "@ds-pack/use-refs": "^1",
-    "@mdx-js/loader": "^1",
-    "@mdx-js/react": "^1",
-    "@next/mdx": "^11",
-    "@vanilla-extract/babel-plugin": "^1",
-    "@vanilla-extract/css": "^1",
-    "@vanilla-extract/next-plugin": "^2",
+    "@vanilla-extract/babel-plugin": "*",
+    "@vanilla-extract/css": "*",
+    "@vanilla-extract/dynamic": "*",
+    "@vanilla-extract/next-plugin": "*",
     "nanopop": "^2",
     "next": "canary",
+    "next-transpile-modules": "^9.0.0",
+    "polished": "^4.2.2",
+    "rainbow-sprinkles": "^0.6",
     "react": "experimental",
-    "react-dom": "experimental",
-    "simple-props": "^0",
-    "styled-components": "^5"
+    "react-dom": "experimental"
   },
   "devDependencies": {
-    "@babel/cli": "^7",
-    "@babel/core": "^7",
     "@babel/plugin-proposal-export-default-from": "^7",
-    "@babel/plugin-transform-runtime": "^7",
     "@babel/plugin-transform-typescript": "^7",
-    "@babel/preset-env": "^7",
-    "@babel/preset-react": "^7",
     "@types/node": "^14",
-    "@types/react": "^16",
-    "babel-plugin-styled-components": "^1",
+    "@types/react": "^18",
     "typescript": "^4"
   }
 }
