--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "deploy": "now",
-    "deploy-prod": "now --prod"
+    "start": "next start"
   },
   "dependencies": {
-    "@babel/core": "^7.18.0",
     "@babel/runtime": "^7",
     "@ds-pack/components": "*",
     "@ds-pack/use-refs": "^1",
@@ -19,18 +16,21 @@
     "@vanilla-extract/dynamic": "*",
     "@vanilla-extract/next-plugin": "*",
     "nanopop": "^2",
-    "next": "canary",
+    "next": "12.2.3-canary.10",
     "next-transpile-modules": "^9.0.0",
     "polished": "^4.2.2",
-    "rainbow-sprinkles": "^0.6",
+    "rainbow-sprinkles": "^0.12",
     "react": "experimental",
-    "react-dom": "experimental",
-    "webpack": "^5"
+    "react-dom": "experimental"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.0",
     "@babel/plugin-proposal-export-default-from": "^7",
     "@types/node": "^14",
     "@types/react": "^18",
-    "typescript": "^4"
-  }
+    "babel-plugin-transform-imports": "2.0.0",
+    "typescript": "^4",
+    "webpack": "^5"
+  },
+  "packageManager": "yarn@3.2.1"
 }
