--- a/package.json
+++ b/package.json
@@ -3,34 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "yarn watch-styles & next dev",
+    "watch-styles": "rollup -c rollup.config.mjs --watch",
+    "build-styles": "rollup -c rollup.config.mjs",
+    "build": "yarn build-styles && next build",
     "start": "next start"
   },
   "dependencies": {
-    "@babel/runtime": "^7",
-    "@ds-pack/components": "*",
-    "@ds-pack/use-refs": "^1",
-    "@vanilla-extract/babel-plugin": "*",
+    "@ds-pack/components": "1.0.14",
+    "@ds-pack/use-refs": "*",
     "@vanilla-extract/css": "*",
     "@vanilla-extract/dynamic": "*",
-    "@vanilla-extract/next-plugin": "*",
-    "nanopop": "^2",
-    "next": "canary",
-    "next-transpile-modules": "^9.0.0",
-    "polished": "^4.2.2",
-    "rainbow-sprinkles": "^0.12",
-    "react": "experimental",
-    "react-dom": "experimental"
+    "eslint-config-next": "latest",
+    "nanopop": "2.1.0",
+    "next": "latest",
+    "rainbow-sprinkles": "*",
+    "react": "latest",
+    "react-dom": "latest"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.0",
-    "@babel/plugin-proposal-export-default-from": "^7",
-    "@types/node": "^14",
-    "@types/react": "^18",
-    "babel-plugin-transform-imports": "2.0.0",
-    "typescript": "^4",
-    "webpack": "^5"
+    "@types/node": "^16.11.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.4",
+    "@vanilla-extract/rollup-plugin": "^1.2.0",
+    "fast-glob": "^3.2.12",
+    "prettier": "^2.8.1",
+    "rollup": "^3.7.5",
+    "typescript": "4.9.4"
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.3.1"
 }
